--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,5 +1,6 @@
+# used https://github.com/PaperMC/Paper/blob/master/.github/ISSUE_TEMPLATE/behavior-bug-or-plugin-incompatibility.yml as template
 name: Bug or incompatibility
-description: Report issues with plugin incompatibility or other behavior related issues.
+description: report issues within RedisBungee
 labels: [ "waiting" ]
 body:
   - type: textarea
