--- a/RedisBungee-API/src/main/resources/lang.yml
+++ b/RedisBungee-API/src/main/resources/lang.yml
@@ -38,14 +38,18 @@ use-client-locale: true
 messages:
   logged-in-other-location:
     en-us: "<color:red>You logged in from another location!"
+    pt-br: "<color:red>Você está logado em outra localização!"
   already-logged-in:
     en-us: "<color:red>You are already logged in!"
+    pt-br: "<color:red>Você já está logado!"
   server-not-found:
     # placeholder <server> displays server name in the message.
     en-us: "<color:red>unable to connect you to the last server, because server <server> was not found."
+    pt-br: "<color:red>falha ao conectar você ao último servidor, porque o servidor <server> não foi encontrado."
   server-connecting:
     # placeholder <server> displays server name in the message.
     en-us: "<color:green>Connecting you to <server>..."
+    pt-br: "<color:green>Conectando você a <server>..."
 
 # DO NOT CHANGE!!!!!
 config-version: 1
