--- a/RedisBungee-API/src/main/resources/config.yml
+++ b/RedisBungee-API/src/main/resources/config.yml
@@ -8,7 +8,7 @@
 # - 'KeyDB' by Snapchat inc https://docs.keydb.dev/docs/download/
 
 
-# The Redis server you will use.
+# The 'Redis', 'ValKey', 'KeyDB' server you will use.
 # these settings are ignored when cluster mode is enabled.
 redis-server: 127.0.0.1
 redis-port: 6379
@@ -19,7 +19,7 @@ cluster-mode-enabled: false
 
 # FORMAT:
 # redis-cluster-servers:
-# - host: 127.0.0.1
+# - host: 127.0.0.1`
 #   port: 2020
 # - host: 127.0.0.1
 #   port: 2021
